--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router": "^7.3.0",
     "tailgrids": "^2.2.7",
     "tailwindcss": "^4.0.12"
