--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-player": "^2.16.0",
     "react-router": "^7.3.0",
     "tailgrids": "^2.2.7",
     "tailwindcss": "^4.0.12"
